<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout
            style="@style/linear_layout_vertical_match"
            android:animateLayoutChanges="true"
            >

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/videoView_details"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:layout_marginBottom="@dimen/margin_standard_size_vertical"
                android:layout_marginLeft="@dimen/margin_standard_size_horizontal"
                android:layout_marginRight="@dimen/margin_standard_size_horizontal"
                app:default_artwork="@drawable/exo_notification_small_icon"
                app:use_artwork="true"
                />
            <TextView
                android:id="@+id/tv_step_details"
                android:layout_weight="4"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="16sp"
                app:autoSizeMaxTextSize="24sp"
                app:autoSizeStepGranularity="2sp"
                style="@style/step_formatted"
                tools:text="@tools:sample/lorem/random" />

            <LinearLayout
                android:id="@+id/linear_layout_two_details"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:animateLayoutChanges="true"
                >

                <Button
                    android:id="@+id/btn_previous_step"
                    android:text="@string/prev_step"
                    android:layout_weight="1"
                    style="@style/button"
                    />

                <Button
                    android:id="@+id/btn_next_step"
                    android:text="@string/next_step"
                    android:layout_weight="1"
                    style="@style/button"
                    />
            </LinearLayout>
        </LinearLayout>
</layout>