<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.RecipeDetailsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recipe_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>


</layout>