<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <include
            android:id="@+id/included_layout"
            layout="@layout/progress_bar"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </FrameLayout>
</layout>