<resources>
    <string name="app_name">Baking App</string>

    <string name="main_activity_title">Baking Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="RECIPE_ID_EXTRA">com.krinotech.bakingapp.RECIPE_ID_EXTRA</string>
    <string name="INGREDIENTS_EXTRA">INGREDIENTS_EXTRA</string>
    <string name="STEP_EXTRA">STEP_EXTRA</string>
    <string name="POSITION_EXTRA">POSITION_EXTRA</string>
    <string name="prev_step">Prev Step</string>
    <string name="next_step">Next Step</string>
    <string name="appwidget_text">Ingredients</string>
    <string name="add_widget">Add widget</string>
    <string name="INGREDIENTS_WIDGET_EXTRA">Ingredients Widget</string>
    <string name="RECIPE_NAME_EXTRA">RECIPE_NAME_EXTRA</string>
</resources>
